<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true" />

        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <androidx.cardview.widget.CardView android:id="@+id/video_noise_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center"  android:orientation="vertical" android:id="@+id/video_noise_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView android:layout_width="80dp" android:background="@drawable/videonoise2" android:layout_height="80dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reduce_video_noise"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@+id/audio_noise_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:layout_marginStart="50dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/audio_noise_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView  android:layout_width="80dp" android:background="@drawable/audionoise" android:layout_height="80dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/reduce_audio_noise"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <androidx.cardview.widget.CardView android:id="@+id/video_audio_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/video_audio_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView android:layout_width="80dp" android:background="@drawable/videotoaudio1" android:layout_height="80dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/video_to_audio"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@+id/volume_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="10dp" android:layout_marginStart="50dp" android:elevation="8dp" app:cardCornerRadius="15dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/volume_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView  android:layout_width="80dp" android:background="@drawable/volume" android:layout_height="80dp" android:layout_margin="5dp"/>
                    <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/increase_volume"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/output_card" android:layout_width="140dp" android:layout_height="150dp" android:layout_margin="20dp" android:elevation="8dp" app:cardCornerRadius="15dp">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/output_layout" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:background="@drawable/ic_baseline_folder_24" android:layout_width="80dp" android:layout_height="80dp" android:layout_margin="5dp"/>
                <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/open_path"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>